# StraightforwardNeuralNetwork

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  BestNeuralNetworkForAudioCatsAndDogs.snn  CMakeLists.txt  LICENSE  Makefile  README.md  _config.yml  _config_local.yml  bugs_and_features.md  index.md  installation.md  quick_start.md  quickstart.md
src/: CMakeLists.txt  NeuralNetworkOption.hpp
src/Header Files/: layer.h  neuralNetwork.h  test.h
src/Source Files/: ReLU.h  activationfunction.cpp  alltoall.cpp  layer.cpp  main.cpp  neuralNetwork.cpp  neuralNetworkLearning.cpp  statisticAnalysis.cpp  tanh.h
src/data/: CompositeForClassification.cpp  CompositeForClassification.hpp  CompositeForContinuousData.cpp  CompositeForContinuousData.hpp  CompositeForMultipleClassification.cpp  CompositeForMultipleClassification.hpp  CompositeForNonTemporalData.cpp  CompositeForNonTemporalData.hpp  CompositeForRegression.cpp  CompositeForRegression.hpp  CompositeForTemporalData.cpp  CompositeForTemporalData.hpp  CompositeForTimeSeries.cpp  CompositeForTimeSeries.hpp  Data.cpp  Data.h  Data.hpp  DataForClassification.cpp  DataForClassification.h  DataForClassification.hpp  DataForMultipleClassification.cpp  DataForMultipleClassification.h  DataForMultipleClassification.hpp  DataForRegression.cpp  DataForRegression.h  DataForRegression.hpp  Dataset.cpp  ProblemComposite.cpp  ProblemComposite.hpp  Set.hpp  StraightforwardData.cpp  StraightforwardData.h  TemporalComposite.cpp  TemporalComposite.hpp
src/external_library/bitmap/: BitmapImage.cpp  CMakeLists.txt
src/external_library/cpp-static-block/: CMakeLists.txt  static_block.cpp  static_block.hpp
src/inputData/: Data.cpp  Data.h  DataForClassification.h  DataForRegression.cpp  DataForRegression.h
src/neuralNetwork/: StraightforwardNeuralNetwork.cpp  StraightforwardNeuralNetwork.h  StraightforwardOption.cpp  StraightforwardOption.h  neuralNetwork.cpp  neuralNetwork.h  neuralNetworkGettersAndSetters.cpp  neuralNetworkLearning.cpp  statisticAnalysis.cpp  statisticAnalysis.h
src/neuralNetwork/layer/: alltoall.cpp  alltoall.h  layer.cpp  layer.h
src/neuralNetwork/layer/perceptron/: perceptron.h  (+1 more)
src/neural_network/: NeuralNetwork.cpp  NeuralNetwork.hpp  NeuralNetworkGettersAndSetters.cpp  NeuralNetworkLearning.cpp  NeuralNetworkOption.cpp  NeuralNetworkOption.hpp  NeuralNetworkVisualization.cpp  NeuralNetworkVisualization.hpp  Optimizer.hpp  StatisticAnalysis.cpp  StatisticAnalysis.hpp  StraightforwardNeuralNetwork.cpp  StraightforwardNeuralNetwork.hpp  StraightforwardNeuralNetwork.tpp  StraightforwardOption.cpp  StraightforwardOption.hpp  Wait.cpp  Wait.hpp  WaitOption.hpp
src/neural_network/layer/: AllToAll.cpp  AllToAll.hpp  BaseLayer.hpp  Convolution.cpp  Convolution.hpp  Convolution1D.cpp  Convolution1D.hpp  Convolution2D.cpp  Convolution2D.hpp  Filter.cpp  Filter.hpp  FilterLayer.cpp  FilterLayer.hpp  FilterLayer.tpp  FullyConnected.cpp  FullyConnected.hpp  GruLayer.cpp  GruLayer.hpp  Layer.cpp  Layer.hpp  Layer.tpp  LayerFactory.cpp  LayerFactory.hpp  LayerModel.hpp  LayerOption.cpp  LayerOption.hpp  LayerType.hpp  LocallyConnected1D.cpp  LocallyConnected1D.hpp  LocallyConnected2D.cpp  LocallyConnected2D.hpp  MaxPooling1D.cpp  MaxPooling1D.hpp  MaxPooling2D.cpp  MaxPooling2D.hpp  NoNeuronLayer.cpp  NoNeuronLayer.hpp  Recurrence.cpp  Recurrence.hpp  SimpleLayer.cpp  (+2 more)
src/neural_network/optimizer/: Adam.cpp  Adam.hpp  Dropout.cpp  Dropout.hpp  ErrorMultiplier.cpp  ErrorMultiplier.hpp  L1Regularization.cpp  L1Regularization.hpp  L2Regularization.cpp  L2Regularization.hpp  LayerOptimizer.cpp  LayerOptimizer.hpp  LayerOptimizerFactory.cpp  LayerOptimizerFactory.hpp  LayerOptimizerModel.hpp  NeuralNetworkOptimizer.cpp  NeuralNetworkOptimizer.hpp  NeuralNetworkOptimizerFactory.cpp  NeuralNetworkOptimizerFactory.hpp  NeuralNetworkOptimizerModel.hpp  Optimizer.hpp  OptimizerModel.hpp  OptimizerType.hpp  Softmax.cpp  Softmax.hpp  StochasticGradientDescent.cpp  StochasticGradientDescent.hpp  neuralNetworkOptimizer.hpp
src/tools/: ExtendedExpection.hpp  Tensor.cpp  Tensor.hpp  Tools.cpp  Tools.h  Tools.hpp
test/: CMakeLists.txt  Makefile  hello  hello.cpp
test/unit_tests/: ExamplesTest.cpp  ExamplesTests.cpp  GTestTools.h  GTestTools.hpp  MemoryTests.cpp  SaveNeuralNetworkTest.cpp  SaveNeuralNetworkTests.cpp  UnitTestTests.cpp  main.cpp
tests/: .clang-tidy  CMakeLists.txt  ExtendedGTest.cpp  ExtendedGTest.hpp
tests/AudioFile/: CMakeLists.txt
tests/audiofile/: AudioFile.cpp  AudioFile.hpp  CMakeLists.txt
tests/dataset_tests/: CMakeLists.txt  Dataset.cpp  Dataset.hpp  ImportDatasets.sh  TestDataset.cpp  TestDataset.hpp  main.cpp
tests/dataset_tests/CIFAR-10/: Cifar10.cpp  Cifar10.hpp  Cifar10Test.cpp
tests/dataset_tests/Fashion-MNIST/: FashionMnist.cpp  FashionMnist.hpp  FashionMnistTest.cpp
tests/dataset_tests/Iris/: Iris.cpp  Iris.hpp  IrisTest.cpp
tests/dataset_tests/MNIST/: Mnist.cpp  Mnist.hpp  MnistTest.cpp
tests/dataset_tests/Wine/: Wine.cpp  Wine.hpp  WineTest.cpp
tests/dataset_tests/affNIST/: Affnist.cpp  Affnist.hpp  AffnistTest.cpp
tests/dataset_tests/audio-cats-and-dogs/: AudioCatsAndDogs.cpp  AudioCatsAndDogs.hpp  AudioCatsAndDogsTest.cpp
tests/dataset_tests/daily-min-temperatures/: DailyMinTemperatures.cpp  DailyMinTemperatures.hpp  DailyMinTemperaturesTest.cpp
tests/manual_tests/: Cifar10SimpleNetwork.py  ComplexeLocallyConnected2D.py  Convolution1D.py  Convolution2D.py  FashionMnistSimpleNetwork.py  Layer.py  LocallyConnected1D.py  SimpleLocallyConnected2D.py  SimplierConvolution1D.py  SimplierConvolution2D.py  sigmoid.py
tests/unit_tests/: AdditionTests.cpp  ArchitectureTests.cpp  CMakeLists.txt  ConvolutionLearningTest.cpp  ConvolutionTest.cpp  ConvolutionTests.cpp  ExampleTests.cpp  ExamplesTest.cpp  IdentityTests.cpp  LocallyConnectedTests.cpp  MaxPoolingTests.cpp  MemoryTests.cpp  NumericLimitTests.cpp  OptimizerTests.cpp  RecurrenceTests.cpp  SaveNeuralNetworkTest.cpp  SaveNeuralNetworkTests.cpp  SequentialTests.cpp  SoftmaxTests.cpp  TrainTests.cpp  UnitTestTests.cpp  main.cpp
(+209 files in other folders)
